# formspec

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-BSL  LICENSING.md  Makefile  PLANNING.md  README.md  REMAINING_TESTS_PLAN.md  STACK.md  STUDIO-REVIEW-TODO.md  TODO-STACK.md  TODO.md  changelog-spec.md  changelog.html  component.schema.json  context.md  definition.schema.json  e2e-coverage-matrix.md  e2e-test-strategy.md  e2e-testing-plan.md  extension-registry.html  fel-grammar.html  fel-grammar.md  filemap.json  firebase.json  formspec-mcp.mcpb  index.html  manage-state.md  mapping-spec.md  mapping.schema.json  package-lock.json  package.json  plan.md  (+13 more)
.cargo/: config.toml
.changeset/: README.md
.claude/: mcp.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.popcorn-xp/: ADVICE.md  CONTEXT.md  LOCK.md  LOG.md
.storybook/: dom-serializer.ts  main.ts  preview.tsx  vitest.setup.ts
benchmarks/: README.md  run_benchmark.py  test_benchmark_harness.py
crates/fel-core/: Cargo.toml  README.md
crates/fel-core/src/: ast.rs  context_json.rs  convert.rs  dependencies.rs  environment.rs  error.rs  evaluator.rs  extensions.rs  interpolation.rs  lexer.rs  lib.rs  parser.rs  prepare_host.rs  printer.rs  trace.rs  types.rs  wire_style.rs
crates/fel-core/tests/: evaluator_edge_cases.rs  evaluator_tests.rs  lexer_tests.rs  locale_fel_functions.rs  parser_rejection_tests.rs  regex_tests.rs  trace_tests.rs
crates/formspec-core/: Cargo.toml  README.md
crates/formspec-core/docs/rustdoc-md/: API.md
crates/formspec-core/src/: assembler.rs  assembly_fel_rewrite.rs  changelog.rs  definition_items.rs  extension_analysis.rs  fel_analysis.rs  fel_condition_group_lift.rs  fel_rewrite_exact.rs  json_artifacts.rs  json_util.rs  lib.rs  option_sets.rs  path_utils.rs  registry_client.rs  response_migration.rs  runtime_mapping.rs  schema_validator.rs  value_coerce.rs  wire_keys.rs
crates/formspec-core/src/registry_client/: mod.rs  wire_json.rs
crates/formspec-core/src/runtime_mapping/: document.rs  engine.rs  mod.rs  parse.rs  path.rs  tests.rs  transforms.rs  types.rs  wire_json.rs
crates/formspec-core/tests/: changelog_test.rs
crates/formspec-eval/: Cargo.toml  README.md
crates/formspec-eval/src/: eval_json.rs  fel_json.rs  lib.rs  nrb.rs  pipeline.rs  rebuild.rs  recalculate.rs  registry_constraints.rs  revalidate.rs  runtime_seed.rs  screener.rs  screener_eval.rs  types.rs  value_predicate.rs
crates/formspec-eval/src/rebuild/: initial_values.rs  item_tree.rs  mod.rs  repeat_data.rs  repeat_expand.rs  tests.rs  wildcard.rs
crates/formspec-eval/src/recalculate/: bind_pass.rs  calculate_pass.rs  mod.rs  repeats.rs  variables.rs
crates/formspec-eval/src/revalidate/: env.rs  expr.rs  items.rs  mod.rs  shapes.rs
crates/formspec-eval/src/types/: definition.rs  determination.rs  evaluation.rs  extensions.rs  item_tree.rs  mod.rs  modes.rs  paths.rs
crates/formspec-eval/tests/integration/: evaluate_pipeline.rs  mod.rs  type_validation.rs
crates/formspec-wasm/: Cargo.toml  README.md
crates/formspec-wasm/src/: changelog.rs  changeset.rs  convert.rs  definition.rs  document.rs  evaluate.rs  fel.rs  json_host.rs  lib.rs  mapping.rs  registry.rs  value_coerce.rs  wasm_tests.rs
docs/: audit-spec-vs-schema.md  changelog.html  component-spec.html  extension-registry.html  grant-application-guide.md  grant-application.html  index.html  mapping.html  spec.html  theme-spec.html
examples/: README.md
fel/: __init__.py  functions.py  parser.py  types.py
form-builder/: README.md  index.html  package.json  preview-frame.html  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
formspec-studio/: README.md
functions/: index.js  package.json
playground/: main.ts  styles.css
project/: SCHEMA-REVIEW.md
registries/: formspec-common.registry.json
schemas/: changelog.schema.json  component.schema.json  conformance-suite.schema.json  core-commands.schema.json  definition.schema.json  determination.schema.json  fel-functions.schema.json  intake-handoff.schema.json  locale.schema.json  mapping.schema.json  registry.schema.json  respondent-ledger-event.schema.json  response.schema.json  screener.schema.json  theme.schema.json  validationReport.schema.json  validationResult.schema.json
(+1118 files in other folders)
