[package]
name = "fel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec Expression Language — parser, evaluator, and dependency analysis"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
intl_pluralrules = "7.0.2"
regex = "1"
rust_decimal = "1"
serde_json = "1"
unic-langid = "0.9"

[dev-dependencies]
# None
