[package]
name = "formspec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec core processing — FEL analysis, path utils, schema validation, assembler"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
fel-core = { version = "0.1.0", path = "../fel-core" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# None
