[package]
name = "formspec-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formspec definition batch evaluator: rebuild, recalculate, revalidate, and NRB output shaping"
repository = "https://github.com/Formspec-org/formspec"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
fancy-regex = "0.14"
fel-core = { version = "0.1.0", path = "../../../fel-core" }
formspec-core = { version = "0.1.0", path = "../formspec-core" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Integration tests call `fel_core` directly (round-trip checks); keep this explicit.
[dev-dependencies]
fel-core = { version = "0.1.0", path = "../../../fel-core" }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
