[package]
name = "formspec-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Formspec — exposes fel-core and formspec-core to TypeScript"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Lint pulls `formspec-lint` + schema/jsonschema stack — omit from the runtime WASM artifact (ADR 0050).
default = ["lint"]
lint = ["dep:formspec-lint"]

[dependencies]
fel-core = { path = "../fel-core" }
formspec-core = { path = "../formspec-core" }
formspec-eval = { path = "../formspec-eval" }
formspec-lint = { path = "../formspec-lint", optional = true }
rust_decimal = "1"
serde = "1"
serde_json = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
